remove old Extraction Classes