@@ -132,7 +132,7 @@ public class FieldType {
 
 	private void getAllSuperInterfaces(Class<?> c, List<Class<?>> interfaces) {
 		Class<?> list[] = c.getInterfaces();
-		interfaces.addAll(List.of(list));
+		interfaces.addAll(Arrays.asList(list));
 
 		for (Class<?> i : list) {
 			getAllSuperInterfaces(i, interfaces);
